hint style preparation